# HealthSurgeAI

./: README.md  changes.txt  et --hard 607644b  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
api/: hospital_daily_1996_2024_indian_holidays.csv  index.py
backend/: main.py  model.keras  scaler.pkl  test_server.py
convex/: auth.ts  myFunctions.ts  schema.ts
convex/_generated/: api.d.ts
convex/auth/: SignInGoogle.tsx  SignInPassword.tsx
src/: App.tsx  config.ts  index.css
src/Components/: AddBedForm.tsx  AddBedModal.tsx  AgentStatus.tsx  DepartmentCard.tsx  HospitalCard.tsx  HospitalCardSection.tsx  Sidebar.tsx  SignIn.tsx  StatCard.tsx  Toaster.tsx  UserLayout.tsx  UserSettings.tsx  UserSidebar.tsx
src/Components/DashboardViews/: AlertsView.tsx  BedManagementView.tsx  ContactsView.tsx  EmergencyManager.tsx  NotificationsView.tsx  Overview.tsx  PredictionsView.tsx  ResourcesView.tsx  SettingsView.tsx
src/Pages/: Dashboard.tsx  Hospitals.tsx  Landing.tsx  LoginPage.tsx  UserProfile.tsx
src/utils/: weatherSimulator.ts
